--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <i class="far fa-star"></i>
           <i class="far fa-star"></i>
         </div>
-        <p>₹500.00</p>
+        <p>$500.00</p>
       </div>
   
       <div class="col-4">
@@ -233,20 +233,18 @@
     <div class="small-container">
       <div class="row">
         <div class="col-2">
-          <img src="https://i.ibb.co/HF5TncZ/exclusive.png" alt="" class="offer-img" />
+          <img src="image/louis-vuitton-workwear-overshirt--HOS04WTA7900_PM2_Front view.webp" alt="" class="offer-img" />
         </div>
         <div class="col-2">
-          <p>Exclusively Available on RedStore</p>
-          <h1>Smart Band 4</h1>
-          <small>The Mi Smart Band 4 features a 39.9% larger (than Mi Band 3)
-            AMOLED color full-touch display with adjustable brightness, so
-            everything is clear as can be.</small>
+          <p>Exclusively Available on Miracle wares</p>
+          <h1>miaracle brands</h1>
+          <small>Shirts Collection for Men | LOUIS VUITTON - 2</small>
           <br />
           <a href="#" class="btn">Buy Now →</a>
         </div>
       </div>
     </div>
-  </div>
+  </div><br><br>
   
   <!-- Testimonial -->
   <div class="testimonial">
@@ -255,10 +253,9 @@
         <div class="col-3">
           <i class="fas fa-quote-left"></i>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perferendis, quae molestias error id est voluptatibus quos amet
-            numquam aspernatur nam cumque ullam? Veritatis eveniet et, maxime
-            eaque soluta quas modi.
+            I love how simple, yet very efficient Miracle wares is.
+           The ability to customize properties has been a huge benefit
+            to both my sales team and our reporting.
           </p>
           <div class="rating">
             <i class="fas fa-star"></i>
@@ -274,10 +271,8 @@
         <div class="col-3">
           <i class="fas fa-quote-left"></i>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perferendis, quae molestias error id est voluptatibus quos amet
-            numquam aspernatur nam cumque ullam? Veritatis eveniet et, maxime
-            eaque soluta quas modi.
+            I’ve had multiple customers tell me they bought vim.so because of the reviews 👍
+
           </p>
           <div class="rating">
             <i class="fas fa-star"></i>
